Fixing test cases and adding some more unit tests